// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render SingleSelectableRows one selectable row and one non-selectable row 1`] = `
<SelectableTableRows
  disableUnselectedRows={false}
  onChange={[Function]}
  selectedIndexes={
    Array [
      -1,
    ]
  }
>
  <TableRow
    className="PERSON_0"
    isSelected={false}
  >
    <TableCell
      content="John Smith"
    />
    <TableCell
      content="123 Adams Drive"
    />
    <TableCell
      content="111-222-3333"
    />
  </TableRow>
  <TableRow
    isSelectable={false}
    isSelected={false}
  >
    <TableCell
      content="John Smith"
    />
    <TableCell
      content="123 Adams Drive"
    />
    <TableCell
      content="111-222-3333"
    />
  </TableRow>
</SelectableTableRows>
`;

exports[`should render SingleSelectableRows tag 1`] = `
<SelectableTableRows
  disableUnselectedRows={false}
  onChange={[Function]}
  selectedIndexes={
    Array [
      -1,
    ]
  }
>
  <TableRow
    className="PERSON_0"
    isSelected={false}
  >
    <TableCell
      content="John Smith"
    />
    <TableCell
      content="123 Adams Drive"
    />
    <TableCell
      content="111-222-3333"
    />
  </TableRow>
  <TableRow
    className="PERSON_1"
    isSelected={false}
  >
    <TableCell
      content="John Smith"
    />
    <TableCell
      content="123 Adams Drive"
    />
    <TableCell
      content="111-222-3333"
    />
  </TableRow>
</SelectableTableRows>
`;

exports[`should render SingleSelectableRows with no rows 1`] = `
<SelectableTableRows
  disableUnselectedRows={false}
  onChange={[Function]}
  selectedIndexes={
    Array [
      null,
    ]
  }
/>
`;

exports[`should render SingleSelectableRows with one row 1`] = `
<SelectableTableRows
  disableUnselectedRows={false}
  onChange={[Function]}
  selectedIndexes={
    Array [
      -1,
    ]
  }
>
  <TableRow
    className="PERSON_0"
    isSelected={false}
  >
    <TableCell
      content="John Smith"
    />
    <TableCell
      content="123 Adams Drive"
    />
    <TableCell
      content="111-222-3333"
    />
  </TableRow>
</SelectableTableRows>
`;

exports[`should select an row 1`] = `
<SelectableTableRows
  disableUnselectedRows={false}
  onChange={[Function]}
  selectedIndexes={
    Array [
      -1,
    ]
  }
>
  <TableRow
    className="PERSON_0"
    isSelected={false}
  >
    <TableCell
      content="John Smith"
    />
    <TableCell
      content="123 Adams Drive"
    />
    <TableCell
      content="111-222-3333"
    />
  </TableRow>
  <TableRow
    className="PERSON_1"
    isSelected={false}
  >
    <TableCell
      content="John Smith"
    />
    <TableCell
      content="123 Adams Drive"
    />
    <TableCell
      content="111-222-3333"
    />
  </TableRow>
</SelectableTableRows>
`;

exports[`should select an row 2`] = `
<SelectableTableRows
  disableUnselectedRows={false}
  onChange={[Function]}
  selectedIndexes={
    Array [
      -1,
    ]
  }
>
  <TableRow
    className="PERSON_0"
    isSelected={false}
  >
    <TableCell
      content="John Smith"
    />
    <TableCell
      content="123 Adams Drive"
    />
    <TableCell
      content="111-222-3333"
    />
  </TableRow>
  <TableRow
    className="PERSON_1"
    isSelected={false}
  >
    <TableCell
      content="John Smith"
    />
    <TableCell
      content="123 Adams Drive"
    />
    <TableCell
      content="111-222-3333"
    />
  </TableRow>
</SelectableTableRows>
`;
